--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
     "eslint": "^7.18.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
     "jest": "^26.6.3",
+    "prettier": "^2.3.2",
     "rollup": "^2.38.0",
     "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "^26.4.4",
